hphp/test/slow/coeffects/generator-unwind-2.php.expectf
Warning: Call to HH\AsyncGenerator::next() requires [rx] coeffects but pure() provided [] in %s on line 13

Warning: Call to HH\AsyncGenerator::next() requires [rx] coeffects but pure() provided [] in %s on line 14

Fatal error: Uncaught exception 'Exception' with message 'Generator is already finished' in %s:21
Stack trace:
%A
